seetaram/nimesh -Fixed the couple of bugs.
What changes have you made?

* fixed the bug for showing the player name near players coins,
	fixed the bug in dice ealier dice image image was not showing
	acording to dice value but now it is showing,
	fixed the bug for winner name ealier when player was winning
	instead of his/her name oponent's player name was comming but
	now winner player name is comming,

Why do we need this change?

* to make sure player can play the game and while playing he/she
	will not get eritate.

What can this change impact?

* it will make sure that every thing is working properly.

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -15,6 +15,7 @@ h1 {
   height: 93vh;
   top: 7vh;
   left: 0;
+  overflow: scroll;
   position: fixed;
   background-color: lightgray;
 }
